--- a/assingments/lesson-6/styles/small-6.css
+++ b/assingments/lesson-6/styles/small-6.css
@@ -5,11 +5,11 @@
   }
 @media only screen and (min-width: 400px) {
      .hero-image{ 
-        url(#); 
+        
     } 
 }
   body {
-    background-color: rgb(51, 153,102); 
+    background-color: rgb(51, 153, 102);
 }
 #nav {
         list-style-type: none;
