fixed current date

--- a/assingments/lesson-6/styles/larger-6.css
+++ b/assingments/lesson-6/styles/larger-6.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(255, 255, 255);
+    background-color:gray;
 }
 li {
     float: left;
@@ -17,5 +17,5 @@ li  {
 }
 
 body {
-    background-color: rgb(51, 153,102)
+    background-color: tan;
 }
