--- a/assingments/lesson-6/styles/small-6.css
+++ b/assingments/lesson-6/styles/small-6.css
@@ -9,14 +9,14 @@
     } 
 }
   body {
-    background-color: rgb(51, 153, 102);
+    background-color: tan;
 }
 #nav {
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: rgb(255, 255, 255);
+        background-color:gray;
     }
     li {
         float: left;
