--- a/assingments/lesson-6/styles/small-6.css
+++ b/assingments/lesson-6/styles/small-6.css
@@ -11,72 +11,17 @@
   body {
     background-color: tan;
 }
-#nav {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color:gray;
-    }
-    li {
-        float: left;
-    }
-    li  {
-        display: block;
-        color: black;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-    .topnav {
-        background-color: #333;
-        overflow: hidden;
-    }
-
-    .topnav a {
-        float: left;
-        display: block;
-        color: #000000;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-    }
-
-    .topnav a:hover {
-        background-color: #ddd;
-        color:black;
-
-    }
-
-    .activeNav {
-        background-color: #4CAF50;
-        color: black;
-
-    }
-
-    .topnav .icon {
-        display: none;
-    }
-    @media screen and (max-width: 600px) {
-        .topnav a:not(:first-child) {display:none;}
-        .topnav a.icon {
-            float:right;
-            display: block;
-        }
-        }
-    
-        @media screen and (max-width: 600px) {
-            .topnav.responsive {position: relative;}
-            .topnav.responsive a.icon {
-                position: absolute;
-                right: 0;
-                top: 0;
-            }
-        }
-        .topnav.responsive a {
-            float: none;
-            display: block;
-            text-align: left;
+nav {
+        background-color: grey;
         
-        }
+    }
+    
+    
+    
+    nav ul.hide {display:none;}
+    
+
+    
+
+    
+    
