--- a/assingments/lesson-8/styles/larger-7.css
+++ b/assingments/lesson-8/styles/larger-7.css
@@ -53,4 +53,45 @@ header {
   flex-wrap: wrap;
   align-content: space-between;
 }*/
+form fieldset {
+    margin: 2 rem;
+    border: 5px solid gray;
+    border-radius: 10px;
+    padding: 1rem 2%;
+
+}
+form legend {
+    color: rgba(43, 4, 4, 0.993);
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+form label.top {
+    display: block;
+    padding-top: 1rem;
+    font-size: 1.25rem
+}
+form label.middle {
+    display: block;
+    padding-top: 1rem;
+    font-size: 1.25rem
+}
+form label.bottom {
+    display: block;
+    padding-top: 1rem;
+    font-size: 1.25rem
+}
+form label.top input, form label.middle input, form label.bottom input
+{
+    display: block;
+    border: solid 1px black;
+    padding: .75rem;
+}
+form input.submitButton {
+    color: white;
+    background-color: rgba(43, 4, 4, 0.993);
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    
+}
 }
