--- a/assignments/lesson-6/css/small-6.css
+++ b/assignments/lesson-6/css/small-6.css
@@ -6,29 +6,37 @@ header {
     padding: 1em;
 }
 
+nav {	margin: 0 auto;
+        max-width: 760px; 
+        background-color: tan;	
+    }
 
-nav {
-    
-    display: block;
-    background-color: rgba(4, 110, 4, 0.548);
-    color: white;
-    padding: 1em;
-    border: 1px solid black;
-    font-size: 22px;
-    height: 1.5em
-    
-}
-nav a {
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    visibility: hidden;
-    
+.navigation { 
+    list-style: none; 
+    text-align: center; 
 }
 
-
-nav li:hover {
-    background-color: black;
+  .navigation li:first-child {
+      display: block;
+    }
+  .navigation li { display: none;
 }
+
+  .navigation a {	
+      display: block;
+        color: black; 
+        padding: .75rem;	
+        text-align: center;	
+        text-decoration: none;
+    }
+  .navigation a:hover {	color: #000; 
+    background-color: #fff; 
+    font-weight: 700;	
+}
+    .responsive li { display: block; 
+    }
+
+
 .active {
     background-color: rgb(198, 207, 198);
 }
