--- a/assignments/lesson-8/css/large-8.css
+++ b/assignments/lesson-8/css/large-8.css
@@ -111,4 +111,9 @@
         border-collapse: collapse;
         border-radius: 5%
     }
+    button {
+        font-size: 18px;
+        padding: 6px;
+        border: 2px solid tan;
+    }
 }
