--- a/assignments/lesson-8/css/small-8.css
+++ b/assignments/lesson-8/css/small-8.css
@@ -127,4 +127,9 @@ form label input , form label select {
     border-collapse: collapse;
     border-radius: 5%
 }
+button {
+    font-size: 18px;
+    padding: 10px;
+    border: 2px solid tan;
+}
 }
