--- a/assignments/lesson-7/css/large-7.css
+++ b/assignments/lesson-7/css/large-7.css
@@ -72,4 +72,24 @@
         margin-right: auto;
         width: 40%;
     }
+    .gallery1 {
+       display: flex;
+       height: 200px;
+       flex-direction: row;
+       
+       }
+    .gallery2 {
+        display: flex;
+        height: 200px;
+        flex-direction: row;
+        
+        }
+    picture:hover {
+        box-shadow:  2px 2px 2px #333;
+        border-radius: 13px;
+
+    }
+    .gallery1 p {
+       
+    }   
 }
