--- a/assignments/lesson-7/css/medium-7.css
+++ b/assignments/lesson-7/css/medium-7.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px ) {
+@media only screen and (min-width: 600px ) and (max-width: 992px) {
 
 header {
     background-color: green;
@@ -93,10 +93,10 @@ ul {
     
 }
 .gallery1, .gallery2 {
+
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
     
+    flex-direction: column;  
+    align-items: center;
 }
 }
