--- a/assignments/Final/css/medium.css
+++ b/assignments/Final/css/medium.css
@@ -11,6 +11,11 @@ header {
         text-align: center;
 }
 
+.motto{
+    background-image: url(logo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
 nav {	
     background: rgb(255,255,255);
     font-size: 2em;
