--- a/assignments/Final/css/large.css
+++ b/assignments/Final/css/large.css
@@ -10,7 +10,11 @@
         text-align: center;
     }
    
-    
+    .motto{
+        background-image: url(logo.png);
+        background-repeat: no-repeat;
+        background-position: center;
+    }
     nav {	
         
         background: rgb(255,255,255);
